--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -84,7 +84,7 @@
 
 @media only screen and (max-width: 1299px) {
     .header {
-        position: static;
+        position: absolute;
     }
     .footer {
         .info {
